--- a/package.json
+++ b/package.json
@@ -1,38 +1,60 @@
 {
   "name": "restify-render-middleware",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Simple render middleware for restify.",
+  "author": "Carvalho, Vinicius Luiz <carvalho.viniciusluiz@gmail.com>",
+  "license": "MIT",
   "main": "index.js",
+  "types": "types/default/index.d.ts",
   "scripts": {
-    "pretest": "./node_modules/.bin/standard --verbose | ./node_modules/.bin/snazzy",
-    "test": "jest"
+    "build": "tsc",
+    "test": "ts-node jest.startup.ts --detectOpenHandles --forceExit --no-cache",
+    "pretest": "npm run build",
+    "prepublishOnly": "npm run test"
   },
-  "engineStrict": true,
-  "engines": {
-    "node": ">8.0.0"
-  },
-  "standard": {
-    "env": [
-      "jest"
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
     ]
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/carvalhoviniciusluiz/restify-render-middleware.git"
   },
-  "author": "Carvalho, Vinicius Luiz <carvalho.viniciusluiz@gmail.com>",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/carvalhoviniciusluiz/restify-render-middleware/issues"
   },
   "homepage": "https://github.com/carvalhoviniciusluiz/restify-render-middleware#readme",
+  "devDependencies": {
+    "@types/consolidate": "0.0.34",
+    "@types/jest": "^23.3.1",
+    "@types/pug": "^2.0.4",
+    "@types/restify": "^7.2.4",
+    "jest": "^23.5.0",
+    "jest-cli": "^23.5.0",
+    "restify": "^7.2.1",
+    "ts-jest": "^23.1.4",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.0.3"
+  },
   "dependencies": {
     "consolidate": "^0.15.1",
     "pug": "^2.0.3"
   },
-  "devDependencies": {
-    "jest": "^22.4.3",
-    "snazzy": "^7.1.1",
-    "standard": "^11.0.1"
-  }
+  "keywords": [
+    "restify",
+    "engine",
+    "template",
+    "view"
+  ]
 }
