--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,22 @@
 {
   "compilerOptions": {
-    "outDir": "./",
     "target": "es2018",
-    "module": "commonjs",
     "lib": [ "es2018", "dom" ],
     "removeComments": true,
     "skipLibCheck": true,
+
+    // Module resolution
+    "module": "es2015",
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "moduleResolution": "node",
 
     // Type definitions
     "declaration": true,
     "declarationDir": "types/"
   },
   "exclude": [
+    "dist/",
     "types/",
     "**/*.test.ts",
     "jest.startup.ts"
