:bug: fix package files ignoring distribution sources

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "prepublishOnly": "npm run test"
   },
   "files": [
-    "types/",
-    "index.js"
+    "dist/",
+    "types/"
   ],
   "jest": {
     "testEnvironment": "node",
